@@ -1,4 +1,5 @@
 
+  * Corrected a bug editing commands and links in preferences
   * Added option to repeat the current track
   * The genre edit field shows now all existing genres to choose one of them 
   * In status bar now is shown the leng of the current selection and the size 
